# libparch

./: CMakeLists.txt  README.md  libparch.spec
bindings/: CMakeLists.txt
bindings/go/: CMakeLists.txt
bindings/go/libparch/: CMakeLists.txt
bindings/libparch/: arch.i  basearch.i
bindings/perl5/: CMakeLists.txt
bindings/perl5/libparch/: CMakeLists.txt
bindings/python3/: CMakeLists.txt
bindings/python3/libparch/: CMakeLists.txt
bindings/ruby/: CMakeLists.txt
bindings/ruby/libparch/: CMakeLists.txt
doc/: Doxyfile.in  conf.py.in  index.rst
include/: CMakeLists.txt
include/libarch/: arch.h  basearch.h
include/libparch/: CMakeLists.txt  arch.h  basearch.h
libarch/: CMakeLists.txt  arch.c  autodetect.c
libparch/: CMakeLists.txt  arch.c  autodetect.c  libparch.pc.in  list.h
test/: CMakeLists.txt
test/python3/: CMakeLists.txt
test/python3/libarch/: test_arch.py
test/python3/libparch/: CMakeLists.txt  test_arch.py  test_basearch.py
